# Adaptive-Honeypot-Security-Agent

./: .gitignore  README.md  TECHNICAL_HANDOFF.md  analyzer.py  logger.py  pyproject.toml  server.py  test_decoy_system.py  test_integrated_system.py  test_system.py  test_threat_detector_simple.py
.kiro/specs/adaptive-honeypot-agent/: LEARNING_GUIDE.md  design.md  requirements.md  tasks.md
config/: config.yaml
decoys/: admin_passwords.txt  api_keys.txt  database_config.yaml  financial_data.txt
docs/: 1_DAILY_TASKS.md  2_PROGRESS_TRACKER.md  3_LEARNING_NOTES.md  HOW_IT_WORKS.md  README.md  WEEK_1-2_REVIEW.md
docs/explanations/: DAY_11-12_DETAILED_EXPLANATION.md  DAY_15-16_CLEAN_ARCHITECTURE_GUIDE.md  DAY_15-16_DETAILED_EXPLANATION.md  DAY_17-18_DETAILED_EXPLANATION.md  DAY_3-4_DETAILED_EXPLANATION.md  DAY_5-6_DETAILED_EXPLANATION.md  DAY_7-8_DETAILED_EXPLANATION.md  DAY_9-10_DETAILED_EXPLANATION.md  README.md
src/agent/: main.py
src/decoy/: __init__.py
src/domain/application/: decoy_service.py
src/domain/entities/: decoy.py
src/domain/infrastructure/: file_decoy_generator.py
src/domain/interfaces/: decoy_generator.py
src/monitor/: decoy_manager.py  file_monitor.py  logger.py  threat_detector.py
test_decoys/: admin_passwords.txt  api_keys.txt  confidential_report.txt  database_config.yaml  financial_data.txt  passwords.txt
tests/: simple_test.py  test_decoy_deployment.py  test_decoy_tracking.py
