[# Vim Cheat Sheet & Roadmap – Detailed Text-Only Edition  
Aryan’s Comprehensive Vim Reference (No Images)  
Focus: Deep command coverage, patterns, gotchas, and daily-use power moves

## Quick Roadmap – Structured Practice Path

1. **Week 1** – Modes + Navigation + Basic Operators  
   Modes, hjkl/wbe, i/a/o, x/dd/yy/p/u, counts (3j, 5dd)

2. **Week 2** – Text Objects + Change/Yank/Delete Patterns  
   ciw/ci"/da(/yap, visual mode (v/V/Ctrl+v), gv, operators + counts

3. **Week 3** – Search, Replace, Windows, Buffers  
   / ? * # :%s, :sp :vsp Ctrl+w, :ls :bnext :bd, :buffers

4. **Week 4** – Registers, Marks, Macros, Folding  
   "ay "ap, m a 'a, qa @a, za zR zM

5. **Month 2+** – Advanced Patterns, .vimrc, Workflow Integration  
   :g :v :sort, diffs, auto-commands, leader mappings, daily muscle memory

Pro Tip: Use `:help index` or `:help quickref` inside Vim for built-in lists.

## 1. Modes – Deep Overview

| Mode              | How to Enter                              | Main Purpose                                | Common Exit       | Gotcha                              |
|-------------------|-------------------------------------------|---------------------------------------------|-------------------|-------------------------------------|
| Normal            | Esc (always your home)                    | Navigation, operators, commands             | —                 | Don’t stay in Insert too long       |
| Insert            | i I a A o O gi                            | Typing text                                 | Esc               | Ctrl+[ = Esc (alternative)          |
| Replace           | R or Shift+R                              | Overwrite existing text                     | Esc               | Like insert but overwrites          |
| Change            | c{motion}                                 | Delete + enter insert                       | Esc after typing  | c$ = C, ciw = change word           |
| Visual            | v (char), V (line), Ctrl+v (block)        | Select → then operate (d y > ~ etc.)        | Esc               | o swaps selection ends              |
| Command-line      | :   /   ?   q: (history)                  | Ex commands, search, command history        | Esc or Ctrl+c     | q: shows command-line history       |
| Cmdline-window    | q: q/ q?                                  | Edit previous commands/searches like text   | Enter to run      | Very powerful for complex replaces  |

## 2. Navigation & Motions (with Counts)

Counts multiply motion: 5j, 12w, 3f(

| Motion          | Meaning                                      | Common Combos                     | Notes / Gotcha                     |
|-----------------|----------------------------------------------|-----------------------------------|------------------------------------|
| h j k l         | left down up right                           | 10j 5k                            | Arrow keys also work (but slower)  |
| w b e ge        | fwd word / bwd word / end word / bwd end     | dw db de dge                      | lowercase = word (alphanum+_)      |
| W B E gE        | fwd WORD / bwd WORD / end WORD / bwd end     | dW dB                             | WORD = separated by whitespace     |
| 0 ^ $ g_        | line start / first non-blank / line end / last non-blank | d0 d^ D vg_                       | g_ useful before paste             |
| gg G            | first line / last line                       | ggVG (select all)                 | G = last line, not last char       |
| Ctrl+u Ctrl+d   | half page up / down                          |                                   |                                    |
| Ctrl+f Ctrl+b   | full page fwd / back                         |                                   |                                    |
| { }             | prev/next paragraph                          | dap yap ]} [{                     | Good for markdown/code blocks      |
| %               | jump to matching { } ( ) [ ]                 | ci% va%                           | Works on quotes too sometimes      |
| f<char> F<char> | fwd/back to char                             | df) dt, fa                        | ; and , repeat / reverse           |
| t<char> T<char> | fwd/back till before char                    | ct)                               | Like f but stops before            |
| * #             | search word under cursor fwd / back          | * n . (repeat change on matches)  | Very fast for local edits          |

## 3. Operators – The Core Power

Apply [count] operator [count] motion

Common operators:  
d delete • c change • y yank • > indent • < outdent • = auto-indent • gu lowercase • gU uppercase • ~ toggle case • guu/gUU current line

| Pattern       | Meaning                              | Examples                              |
|---------------|--------------------------------------|---------------------------------------|
| Operator + motion | Most common pattern               | dw d$ di" ci( y} >ap =G            |
| Operator + count + motion | Repeat over range          | 5dd 3dw 10>>                       |
| Operator twice    | Apply to whole line              | dd yy cc >> << == guu gUU          |
| c / d / y + i/a + object | Text objects (very powerful) | ciw ci" dap va( ci`                |

## 4. Text Objects – Must-Master List

i = inner (exclude delimiters), a = around (include delimiters)

| Text Object   | Selects                                      | Best Combos                          | Use Case Example                     |
|---------------|----------------------------------------------|--------------------------------------|--------------------------------------|
| iw aw         | inner/around word                            | ciw daw viw                          | Rename variable                      |
| iW aW         | inner/around WORD (bigger)                   | diW                                  | When punctuation is part of word     |
| i" a" i' a'   | quotes (double/single)                       | ci" da'                              | Edit strings                         |
| i( ) i[ ] i{ }| parentheses/brackets/braces                  | ci) da] vi{                          | Function args, arrays, blocks        |
| ib ab         | block ()                                     |                                     | Same as i( a(                        |
| i< >          | angle brackets                               |                                     | HTML tags sometimes                  |
| it at         | inner/around HTML/XML tag content            | cit dat vit                          | Change tag contents                  |
| ip ap         | inner/around paragraph                       | dap yap vip                          | Markdown sections, doc blocks        |
| is as         | sentence                                     | dis                                  | Prose editing                        |
| i` a`         | backticks (markdown code)                    | ci`                                  | Inline code                          |

## 5. Yank / Delete / Paste / Registers

| Command         | Meaning                                      | Notes / Special Registers            |
|-----------------|----------------------------------------------|--------------------------------------|
| yy Y            | yank line                                    |                                      |
| yw y$ y}        | yank word / to EOL / paragraph               |                                      |
| dd D            | delete line / to EOL                         |                                      |
| x X             | delete char fwd / back                       |                                      |
| p P             | paste after / before cursor                  |                                      |
| gp gP           | paste and move cursor after pasted text      | Very useful after yy/dd              |
| "ay "ap         | named register a                             | "a to store, great for multiple clips|
| "+y "+p         | system clipboard (if compiled with +clipboard)| Most modern Vim/Neovim have it      |
| "0p             | paste last yank (not affected by delete)     | Very useful after dd then paste yank |
| :reg or :registers | show all registers                        |                                      |

## 6. Visual Mode Patterns

- v → character wise  
- V → line wise  
- Ctrl+v → block/column wise (great for tables/comments)

After selecting:  
d delete • y yank • > / < indent • = auto-indent • ~ toggle case • gu/gU case  
I (block) → insert at start of block → Esc applies to all lines  
A (block) → append at end of block

gv → re-select last visual area (very powerful after change)

## 7. Search & Replace – Detailed

| Command                   | Meaning                                          |
|---------------------------|--------------------------------------------------|
| /pattern ?pattern         | fwd/back search                                  |
| n N                       | next / previous                                  |
| * #                       | word under cursor fwd/back                       |
| :%s/old/new/g             | replace all in file                              |
| :%s/old/new/gc            | replace with confirm (y/n/a/q/l/^E/^Y)           |
| :5,15s/old/new/g          | replace in lines 5–15                            |
| :'<,'>s/old/new/g         | replace in last visual selection                 |
| :g/pattern/d              | delete all lines matching pattern                |
| :v/pattern/d              | delete lines NOT matching                        |
| :noh / :nohlsearch        | clear search highlight                           |
| :set hlsearch incsearch   | turn on highlight + show as you type             |

## 8. Marks, Jumps, & Quick Navigation

| Command     | Meaning                                      |
|-------------|----------------------------------------------|
| m<letter>   | set mark (a–z local, A–Z global)             |
| '<letter>   | jump to mark line                            |
| `<letter>   | jump to mark exact position                  |
| `.          | last change position                         |
| g; g,       | prev/next change                             |
| Ctrl+o Ctrl+i | prev/next jump (great for navigation)      |

## 9. Windows, Buffers, Tabs

Buffers = open files  
Windows = viewports  
Tabs = tab pages

| Command          | Meaning                                    |
|------------------|--------------------------------------------|
| :enew / :new     | new empty buffer                           |
| :ls / :buffers   | list buffers                               |
| :bnext / :bn     | next buffer                                |
| :bprev / :bp     | prev buffer                                |
| :bd #            | delete buffer #                            |
| Ctrl+^           | toggle last buffer                         |
| :split / :sp     | horizontal split                           |
| :vsplit / :vs    | vertical split                             |
| Ctrl+w hjkl      | move focus between windows                 |
| Ctrl+w =         | equalize window sizes                      |
| :tabnew          | new tab                                    |
| gt gT            | next/prev tab                              |

## 10. Macros & Repeating

qa          start recording to register a  
<actions>  
q           stop recording  
@a          execute macro a  
@@          repeat last used macro  
5@a         run macro 5 times  
:reg a      see macro content

## 11. Folding

:set foldmethod=indent   (or marker, syntax, expr)  
za          toggle fold under cursor  
zo zc       open / close fold  
zR zM       open/close all folds  
zv          open folds to show cursor line

## 12. .vimrc Basics & Common Settings

Put in ~/.vimrc or ~/.config/nvim/init.vim

```vim
set number              " line numbers
set relativenumber      " relative numbers (great with hjkl)
set ignorecase smartcase
set incsearch hlsearch  " highlight as you search
set tabstop=4 shiftwidth=4 expandtab
set autoindent smartindent
set hidden              " allow switching buffers with changes
let mapleader = " "     " space as leader
nnoremap <leader>w :w<CR>
nnoremap <leader>q :q<CR># Vim Cheat Sheet & Roadmap – Detailed Text-Only Edition  
Aryan’s Comprehensive Vim Reference (No Images)  
Focus: Deep command coverage, patterns, gotchas, and daily-use power moves

## Quick Roadmap – Structured Practice Path

1. **Week 1** – Modes + Navigation + Basic Operators  
   Modes, hjkl/wbe, i/a/o, x/dd/yy/p/u, counts (3j, 5dd)

2. **Week 2** – Text Objects + Change/Yank/Delete Patterns  
   ciw/ci"/da(/yap, visual mode (v/V/Ctrl+v), gv, operators + counts

3. **Week 3** – Search, Replace, Windows, Buffers  
   / ? * # :%s, :sp :vsp Ctrl+w, :ls :bnext :bd, :buffers

4. **Week 4** – Registers, Marks, Macros, Folding  
   "ay "ap, m a 'a, qa @a, za zR zM

5. **Month 2+** – Advanced Patterns, .vimrc, Workflow Integration  
   :g :v :sort, diffs, auto-commands, leader mappings, daily muscle memory

Pro Tip: Use `:help index` or `:help quickref` inside Vim for built-in lists.

## 1. Modes – Deep Overview

| Mode              | How to Enter                              | Main Purpose                                | Common Exit       | Gotcha                              |
|-------------------|-------------------------------------------|---------------------------------------------|-------------------|-------------------------------------|
| Normal            | Esc (always your home)                    | Navigation, operators, commands             | —                 | Don’t stay in Insert too long       |
| Insert            | i I a A o O gi                            | Typing text                                 | Esc               | Ctrl+[ = Esc (alternative)          |
| Replace           | R or Shift+R                              | Overwrite existing text                     | Esc               | Like insert but overwrites          |
| Change            | c{motion}                                 | Delete + enter insert                       | Esc after typing  | c$ = C, ciw = change word           |
| Visual            | v (char), V (line), Ctrl+v (block)        | Select → then operate (d y > ~ etc.)        | Esc               | o swaps selection ends              |
| Command-line      | :   /   ?   q: (history)                  | Ex commands, search, command history        | Esc or Ctrl+c     | q: shows command-line history       |
| Cmdline-window    | q: q/ q?                                  | Edit previous commands/searches like text   | Enter to run      | Very powerful for complex replaces  |

## 2. Navigation & Motions (with Counts)

Counts multiply motion: 5j, 12w, 3f(

| Motion          | Meaning                                      | Common Combos                     | Notes / Gotcha                     |
|-----------------|----------------------------------------------|-----------------------------------|------------------------------------|
| h j k l         | left down up right                           | 10j 5k                            | Arrow keys also work (but slower)  |
| w b e ge        | fwd word / bwd word / end word / bwd end     | dw db de dge                      | lowercase = word (alphanum+_)      |
| W B E gE        | fwd WORD / bwd WORD / end WORD / bwd end     | dW dB                             | WORD = separated by whitespace     |
| 0 ^ $ g_        | line start / first non-blank / line end / last non-blank | d0 d^ D vg_                       | g_ useful before paste             |
| gg G            | first line / last line                       | ggVG (select all)                 | G = last line, not last char       |
| Ctrl+u Ctrl+d   | half page up / down                          |                                   |                                    |
| Ctrl+f Ctrl+b   | full page fwd / back                         |                                   |                                    |
| { }             | prev/next paragraph                          | dap yap ]} [{                     | Good for markdown/code blocks      |
| %               | jump to matching { } ( ) [ ]                 | ci% va%                           | Works on quotes too sometimes      |
| f<char> F<char> | fwd/back to char                             | df) dt, fa                        | ; and , repeat / reverse           |
| t<char> T<char> | fwd/back till before char                    | ct)                               | Like f but stops before            |
| * #             | search word under cursor fwd / back          | * n . (repeat change on matches)  | Very fast for local edits          |

## 3. Operators – The Core Power

Apply [count] operator [count] motion

Common operators:  
d delete • c change • y yank • > indent • < outdent • = auto-indent • gu lowercase • gU uppercase • ~ toggle case • guu/gUU current line

| Pattern       | Meaning                              | Examples                              |
|---------------|--------------------------------------|---------------------------------------|
| Operator + motion | Most common pattern               | dw d$ di" ci( y} >ap =G            |
| Operator + count + motion | Repeat over range          | 5dd 3dw 10>>                       |
| Operator twice    | Apply to whole line              | dd yy cc >> << == guu gUU          |
| c / d / y + i/a + object | Text objects (very powerful) | ciw ci" dap va( ci`                |

## 4. Text Objects – Must-Master List

i = inner (exclude delimiters), a = around (include delimiters)

| Text Object   | Selects                                      | Best Combos                          | Use Case Example                     |
|---------------|----------------------------------------------|--------------------------------------|--------------------------------------|
| iw aw         | inner/around word                            | ciw daw viw                          | Rename variable                      |
| iW aW         | inner/around WORD (bigger)                   | diW                                  | When punctuation is part of word     |
| i" a" i' a'   | quotes (double/single)                       | ci" da'                              | Edit strings                         |
| i( ) i[ ] i{ }| parentheses/brackets/braces                  | ci) da] vi{                          | Function args, arrays, blocks        |
| ib ab         | block ()                                     |                                     | Same as i( a(                        |
| i< >          | angle brackets                               |                                     | HTML tags sometimes                  |
| it at         | inner/around HTML/XML tag content            | cit dat vit                          | Change tag contents                  |
| ip ap         | inner/around paragraph                       | dap yap vip                          | Markdown sections, doc blocks        |
| is as         | sentence                                     | dis                                  | Prose editing                        |
| i` a`         | backticks (markdown code)                    | ci`                                  | Inline code                          |

## 5. Yank / Delete / Paste / Registers

| Command         | Meaning                                      | Notes / Special Registers            |
|-----------------|----------------------------------------------|--------------------------------------|
| yy Y            | yank line                                    |                                      |
| yw y$ y}        | yank word / to EOL / paragraph               |                                      |
| dd D            | delete line / to EOL                         |                                      |
| x X             | delete char fwd / back                       |                                      |
| p P             | paste after / before cursor                  |                                      |
| gp gP           | paste and move cursor after pasted text      | Very useful after yy/dd              |
| "ay "ap         | named register a                             | "a to store, great for multiple clips|
| "+y "+p         | system clipboard (if compiled with +clipboard)| Most modern Vim/Neovim have it      |
| "0p             | paste last yank (not affected by delete)     | Very useful after dd then paste yank |
| :reg or :registers | show all registers                        |                                      |

## 6. Visual Mode Patterns

- v → character wise  
- V → line wise  
- Ctrl+v → block/column wise (great for tables/comments)

After selecting:  
d delete • y yank • > / < indent • = auto-indent • ~ toggle case • gu/gU case  
I (block) → insert at start of block → Esc applies to all lines  
A (block) → append at end of block

gv → re-select last visual area (very powerful after change)

## 7. Search & Replace – Detailed

| Command                   | Meaning                                          |
|---------------------------|--------------------------------------------------|
| /pattern ?pattern         | fwd/back search                                  |
| n N                       | next / previous                                  |
| * #                       | word under cursor fwd/back                       |
| :%s/old/new/g             | replace all in file                              |
| :%s/old/new/gc            | replace with confirm (y/n/a/q/l/^E/^Y)           |
| :5,15s/old/new/g          | replace in lines 5–15                            |
| :'<,'>s/old/new/g         | replace in last visual selection                 |
| :g/pattern/d              | delete all lines matching pattern                |
| :v/pattern/d              | delete lines NOT matching                        |
| :noh / :nohlsearch        | clear search highlight                           |
| :set hlsearch incsearch   | turn on highlight + show as you type             |

## 8. Marks, Jumps, & Quick Navigation

| Command     | Meaning                                      |
|-------------|----------------------------------------------|
| m<letter>   | set mark (a–z local, A–Z global)             |
| '<letter>   | jump to mark line                            |
| `<letter>   | jump to mark exact position                  |
| `.          | last change position                         |
| g; g,       | prev/next change                             |
| Ctrl+o Ctrl+i | prev/next jump (great for navigation)      |

## 9. Windows, Buffers, Tabs

Buffers = open files  
Windows = viewports  
Tabs = tab pages

| Command          | Meaning                                    |
|------------------|--------------------------------------------|
| :enew / :new     | new empty buffer                           |
| :ls / :buffers   | list buffers                               |
| :bnext / :bn     | next buffer                                |
| :bprev / :bp     | prev buffer                                |
| :bd #            | delete buffer #                            |
| Ctrl+^           | toggle last buffer                         |
| :split / :sp     | horizontal split                           |
| :vsplit / :vs    | vertical split                             |
| Ctrl+w hjkl      | move focus between windows                 |
| Ctrl+w =         | equalize window sizes                      |
| :tabnew          | new tab                                    |
| gt gT            | next/prev tab                              |

## 10. Macros & Repeating

qa          start recording to register a  
<actions>  
q           stop recording  
@a          execute macro a  
@@          repeat last used macro  
5@a         run macro 5 times  
:reg a      see macro content

## 11. Folding

:set foldmethod=indent   (or marker, syntax, expr)  
za          toggle fold under cursor  
zo zc       open / close fold  
zR zM       open/close all folds  
zv          open folds to show cursor line

## 12. .vimrc Basics & Common Settings

Put in ~/.vimrc or ~/.config/nvim/init.vim

```vim
set number              " line numbers
set relativenumber      " relative numbers (great with hjkl)
set ignorecase smartcase
set incsearch hlsearch  " highlight as you search
set tabstop=4 shiftwidth=4 expandtab
set autoindent smartindent
set hidden              " allow switching buffers with changes
let mapleader = " "     " space as leader
nnoremap <leader>w :w<CR>
nnoremap <leader>q :q<CR>build-system]
requires = ["setuptools>=65.0"]
build-backend = "setuptools.build_meta"


[project]
name = "honeypot-agent"
version = "0.1.0"
description = "Adaptive File System Honeypot Agent"
requires-python = ">=3.10"

dependencies = [
    "watchdog>=3.0.0",
    "pyyaml>=6.0",
    "faker>=20.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
]
